# myfactory-core

./: .gitignore  README.md  assets.go  go.mod  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: AGENT_PROTOCOL.md  architect-agent.md  business-logic-agent.md  business-qa-agent.md  implementation-agent.md  product-agent.md  qa-agent.md  work-breakdown-agent.md
cmd/myfactory/: main.go
config/: agent-registry.yaml  factory-config.example.yaml  lifecycle.yaml
internal/assets/: assets.go  assets_test.go
internal/cli/: cli.go  cli_test.go
internal/commands/: commands_test.go  discover.go  doctor.go  init.go  init_test.go  orchestrator.go  plan.go  plane.go  version.go
internal/fsops/: fsops.go
internal/gitutil/: gitutil.go
internal/project/: project.go
internal/version/: version.go
internal/yamlmini/: yamlmini.go  yamlmini_test.go
myfactory/: LEGACY.md  __init__.py  __main__.py  cli.py
myfactory/commands/: discover.py  doctor.py  init.py  orchestrator.py  plan.py  plane.py
myfactory/core/: config.py  files.py  git.py  paths.py  template_copy.py
scripts/: create-product.py  install-local.ps1  install-local.sh  install.ps1  install.sh
templates/product-repo/.ApplicationFactory/: config.yaml  product.yaml
templates/product-repo/.ApplicationFactory/orchestrator/: HERMES-CONTROLLER-PROMPT.md  RUNTIME-STATE.yaml  SERVER-REGISTRY-TEMPLATE.yaml  SPRINT-RUN-LOOP.md
templates/product-repo/.github/: pull_request_template.md
templates/product-repo/.github/workflows/: myfactory-checks.yml
templates/project-overlays/codex/: AGENTS.md
(+33 files in other folders)
